--- a/index.html
+++ b/index.html
@@ -8,46 +8,38 @@
         body {
             margin: 0;
             padding: 0;
-            height: 100vh;
-            background-image: url('https://i.imgur.com/3lmgpKR.jpg'); /* Flame background */
+            background-image: url('https://upload.wikimedia.org/wikipedia/commons/e/ef/Flames-1995929_960_720.jpg');
             background-size: cover;
-            background-position: center;
+            font-family: 'Courier New', Courier, monospace;
             color: red;
-            font-family: "Comic Sans MS", cursive, sans-serif;
             text-align: center;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
         }
 
         h1 {
-            font-size: 80px;
-            font-weight: bold;
-            text-shadow: 5px 5px 10px black;
-            letter-spacing: 5px;
-            margin: 0;
+            font-size: 100px;
+            text-shadow: 2px 2px 5px black;
+            margin-top: 50px;
         }
 
         img {
-            width: 250px;
-            margin: 20px 0;
+            margin-top: 50px;
+            width: 300px;
+            height: auto;
+            border: 5px solid black;
+            box-shadow: 5px 5px 15px black;
         }
 
         p {
-            font-size: 20px;
-            width: 60%;
-            text-shadow: 2px 2px 5px black;
-            background-color: rgba(0, 0, 0, 0.7);
-            padding: 10px;
-            border-radius: 5px;
-            color: white;
+            font-size: 24px;
+            color: yellow;
+            margin-top: 30px;
+            text-shadow: 1px 1px 2px black;
         }
     </style>
 </head>
 <body>
     <h1>WHO IS YOUR GOD?</h1>
-    <img src="https://upload.wikimedia.org/wikipedia/en/5/51/Minecraft_Steve.png" alt="Minecraft Steve">
-    <p>This is your creator. Bow down to Steve, the blocky overlord.</p>
+    <img src="https://upload.wikimedia.org/wikipedia/en/7/77/Minecraft_player.png" alt="Minecraft Steve">
+    <p>Your god is always watching...</p>
 </body>
 </html>
