--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Who is God?</title>
+    <title>I KNOW WHO GOD IS.</title>
     <style>
         body {
             margin: 0;
             padding: 0;
-            background-image: url('https://upload.wikimedia.org/wikipedia/commons/e/ef/Flames-1995929_960_720.jpg');
+            background-image: url('https://media.istockphoto.com/id/113494458/photo/fire-isolated-over-black-background.jpg?s=612x612&w=0&k=20&c=u6STGsSpJAyBN8kDeqnVUla4-0SnLpdaTsehFsey2p0=');
             background-size: cover;
-            font-family: 'Courier New', Courier, monospace;
+            font-family: Arial, Helvetica, sans-serif;
             color: red;
             text-align: center;
         }
@@ -40,6 +40,6 @@
 <body>
     <h1>WHO IS YOUR GOD?</h1>
     <img src="https://upload.wikimedia.org/wikipedia/en/7/77/Minecraft_player.png" alt="Minecraft Steve">
-    <p>Your god is always watching...</p>
+    <p>TEXT</p>
 </body>
 </html>
