--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>I KNOW WHO GOD IS.</title>
+    <title></title>
     <style>
         body {
             margin: 0;
@@ -16,9 +16,9 @@
         }
 
         h1 {
-            font-size: 100px;
-            text-shadow: 2px 2px 5px black;
-            margin-top: 50px;
+            font-size: 200px;
+            text-shadow: 4px 4px 10px black;
+            margin-top: 200px;
         }
 
         img {
@@ -38,7 +38,7 @@
     </style>
 </head>
 <body>
-    <h1>WHO IS YOUR GOD?</h1>
+    <h1>I KNOW WHO GOD IS.</h1>
     <img src="https://upload.wikimedia.org/wikipedia/en/7/77/Minecraft_player.png" alt="Minecraft Steve">
     <p>TEXT</p>
 </body>
