--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 </head>
 <body>
     <h1>I KNOW WHO GOD IS.</h1>
-    <img src="https://upload.wikimedia.org/wikipedia/en/7/77/Minecraft_player.png" alt="Minecraft Steve">
-    <p>TEXT</p>
+    <img src="https://cdn.discordapp.com/attachments/634184763174944788/1281046760550043668/god2.png?ex=66da4b44&is=66d8f9c4&hm=25f4307935e8764948a9fd3e62b26166426d252610a4bd1c22b7f172b1c84caf&" alt="Minecraft Steve">
+    <p>DO YOU NOT KNOW?\nDO YOU NOT FEEL REMORSE?\nDO YOU KNOW WHO YOU ARE?\nDO YOU KNOW WHY YOU'RE HERE?\nHE KNOWS.\nHE KNOWS. \nHE KNOWS.</p>
 </body>
 </html>
