--- a/index.html
+++ b/index.html
@@ -22,11 +22,9 @@
         }
 
         img {
-            margin-top: 50px;
+            margin-top: 100px;
             width: 300px;
             height: auto;
-            border: 5px solid black;
-            box-shadow: 5px 5px 15px black;
         }
 
         p {
@@ -40,6 +38,38 @@
 <body>
     <h1>I KNOW WHO GOD IS.</h1>
     <img src="https://cdn.discordapp.com/attachments/634184763174944788/1281046760550043668/god2.png?ex=66da4b44&is=66d8f9c4&hm=25f4307935e8764948a9fd3e62b26166426d252610a4bd1c22b7f172b1c84caf&" alt="Minecraft Steve">
-    <p>DO YOU NOT KNOW?\nDO YOU NOT FEEL REMORSE?\nDO YOU KNOW WHO YOU ARE?\nDO YOU KNOW WHY YOU'RE HERE?\nHE KNOWS.\nHE KNOWS. \nHE KNOWS.</p>
+    <p>DO YOU NOT KNOW?<\p>
+    <p>DO YOU NOT KNOW?<\p>
+    <p>DO YOU NOT KNOW?<\p>
+    <p>DO YOU NOT KNOW?<\p>
+    <p>DO YOU NOT KNOW?<\p>
+    <p>DO YOU NOT KNOW?<\p>
+    <p>DO YOU NOT KNOW?<\p>
+    <p>DO YOU NOT KNOW?<\p>
+    <p>DO YOU NOT KNOW?<\p>
+    <p>DO YOU NOT KNOW?<\p>
+    <p>DO YOU NOT KNOW?<\p>
+    <p>DO YOU NOT KNOW?<\p>
+    <p>DO YOU NOT KNOW?<\p>
+    <p>DO YOU NOT KNOW?<\p>
+    <p>DO YOU NOT KNOW?<\p>
+    <p>DO YOU NOT KNOW?<\p>
+    <p>DO YOU NOT KNOW?<\p>
+    <p>DO YOU NOT KNOW?<\p>
+    <p>DO YOU NOT KNOW?<\p>
+    <p>DO YOU NOT KNOW?<\p>
+    <p>DO YOU NOT KNOW?<\p>
+    <p>DO YOU NOT KNOW?<\p>     
+    <p>DO YOU NOT KNOW?<\p>
+    <p>DO YOU NOT KNOW?<\p>
+    <p>DO YOU NOT KNOW?<\p>
+    <p>DO YOU NOT KNOW?<\p>
+    <p>DO YOU NOT KNOW?<\p>
+    <p>DO YOU NOT KNOW?<\p>
+    <p>DO YOU NOT KNOW?<\p>
+    <p>DO YOU NOT KNOW?<\p>
+    <p>DO YOU NOT KNOW?<\p>
+    <p>DO YOU NOT KNOW?<\p>
+    <p>DO YOU NOT KNOW?<\p>
 </body>
 </html>
