--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
         }
 
         h1 {
-            font-size: 200px;
+            font-size: 150px;
             text-shadow: 4px 4px 10px black;
             margin-top: 200px;
         }
 
         img {
-            margin-top: 100px;
-            width: 300px;
+            margin-top: 50px;
+            width: 600px;
             height: auto;
         }
 
@@ -38,38 +38,29 @@
 <body>
     <h1>I KNOW WHO GOD IS.</h1>
     <img src="https://cdn.discordapp.com/attachments/634184763174944788/1281046760550043668/god2.png?ex=66da4b44&is=66d8f9c4&hm=25f4307935e8764948a9fd3e62b26166426d252610a4bd1c22b7f172b1c84caf&" alt="Minecraft Steve">
-    <p>DO YOU NOT KNOW?<\p>
-    <p>DO YOU NOT KNOW?<\p>
-    <p>DO YOU NOT KNOW?<\p>
-    <p>DO YOU NOT KNOW?<\p>
-    <p>DO YOU NOT KNOW?<\p>
-    <p>DO YOU NOT KNOW?<\p>
-    <p>DO YOU NOT KNOW?<\p>
-    <p>DO YOU NOT KNOW?<\p>
-    <p>DO YOU NOT KNOW?<\p>
-    <p>DO YOU NOT KNOW?<\p>
-    <p>DO YOU NOT KNOW?<\p>
-    <p>DO YOU NOT KNOW?<\p>
-    <p>DO YOU NOT KNOW?<\p>
-    <p>DO YOU NOT KNOW?<\p>
-    <p>DO YOU NOT KNOW?<\p>
-    <p>DO YOU NOT KNOW?<\p>
-    <p>DO YOU NOT KNOW?<\p>
-    <p>DO YOU NOT KNOW?<\p>
-    <p>DO YOU NOT KNOW?<\p>
-    <p>DO YOU NOT KNOW?<\p>
-    <p>DO YOU NOT KNOW?<\p>
-    <p>DO YOU NOT KNOW?<\p>     
-    <p>DO YOU NOT KNOW?<\p>
-    <p>DO YOU NOT KNOW?<\p>
-    <p>DO YOU NOT KNOW?<\p>
-    <p>DO YOU NOT KNOW?<\p>
-    <p>DO YOU NOT KNOW?<\p>
-    <p>DO YOU NOT KNOW?<\p>
-    <p>DO YOU NOT KNOW?<\p>
-    <p>DO YOU NOT KNOW?<\p>
-    <p>DO YOU NOT KNOW?<\p>
-    <p>DO YOU NOT KNOW?<\p>
-    <p>DO YOU NOT KNOW?<\p>
+    <p>DO YOU NOT KNOW?</p>
+    <p>DO YOU NOT KNOW?</p>
+    <p>DO YOU NOT KNOW?</p>
+    <p>DO YOU NOT KNOW?</p>
+    <p>DO YOU NOT KNOW?</p>
+    <p>DO YOU NOT KNOW?</p>
+    <p>DO YOU NOT KNOW?</p>
+    <p>DO YOU NOT KNOW?</p>
+    <p>DO YOU NOT KNOW?</p>
+    <p>DO YOU NOT KNOW?</p>
+    <p>DO YOU NOT KNOW?</p>
+    <p>DO YOU NOT KNOW?</p>
+    <p>DO YOU NOT KNOW?</p>
+    <p>DO YOU NOT KNOW?</p>
+    <p>DO YOU NOT KNOW?</p>
+    <p>DO YOU NOT KNOW?</p>
+    <p>DO YOU NOT KNOW?</p>
+    <p>DO YOU NOT KNOW?</p>
+    <p>DO YOU NOT KNOW?</p>
+    <p>DO YOU NOT KNOW?</p>
+    <p>DO YOU NOT KNOW?</p>
+    <p>DO YOU NOT KNOW?</p>
+    <p>DO YOU NOT KNOW?</p>
+    <p>DO YOU NOT KNOW?</p>
 </body>
 </html>
