--- a/index.html
+++ b/index.html
@@ -39,28 +39,59 @@
     <h1>I KNOW WHO GOD IS.</h1>
     <img src="https://cdn.discordapp.com/attachments/634184763174944788/1281046760550043668/god2.png?ex=66da4b44&is=66d8f9c4&hm=25f4307935e8764948a9fd3e62b26166426d252610a4bd1c22b7f172b1c84caf&" alt="Minecraft Steve">
     <p>DO YOU NOT KNOW?</p>
+    <p>CAN YOU NOT FEEL HIS PRESENCE?</p>
     <p>DO YOU NOT KNOW?</p>
+    <p>DO YOU KNOW WHAT IT MEANS TO BE?</p>
     <p>DO YOU NOT KNOW?</p>
+    <p>DO YOU KNOW WHY YOU'RE HERE?</p>
     <p>DO YOU NOT KNOW?</p>
+    <p>DO YOU KNOW IF THERE'S AN AFTERLIFE?</p>
     <p>DO YOU NOT KNOW?</p>
+    <p>HE KNOWS.</p>
     <p>DO YOU NOT KNOW?</p>
+    <p>HE CAN HELP YOU.</p>
     <p>DO YOU NOT KNOW?</p>
+    <p>YOU CAN BE SAFE.</p>
     <p>DO YOU NOT KNOW?</p>
+    <p>YOU NEED TO TRUST HIM.</p>
     <p>DO YOU NOT KNOW?</p>
+    <p>THERE IS NOTHING TO BE AFRAID OF.</p>
     <p>DO YOU NOT KNOW?</p>
-    <p>DO YOU NOT KNOW?</p>
-    <p>DO YOU NOT KNOW?</p>
-    <p>DO YOU NOT KNOW?</p>
-    <p>DO YOU NOT KNOW?</p>
-    <p>DO YOU NOT KNOW?</p>
-    <p>DO YOU NOT KNOW?</p>
-    <p>DO YOU NOT KNOW?</p>
-    <p>DO YOU NOT KNOW?</p>
-    <p>DO YOU NOT KNOW?</p>
-    <p>DO YOU NOT KNOW?</p>
-    <p>DO YOU NOT KNOW?</p>
-    <p>DO YOU NOT KNOW?</p>
-    <p>DO YOU NOT KNOW?</p>
-    <p>DO YOU NOT KNOW?</p>
+<p>HIS WATCHFUL EYES ARE UPON YOU.</p>
+<p>DO YOU NOT KNOW?</p>
+<p>HE CAN SEE EVERYTHING YOU DO.</p>
+<p>DO YOU NOT KNOW?</p>
+<p>THERE IS NO ESCAPE.</p>
+<p>DO YOU NOT KNOW?</p>
+<p>YOU ARE PART OF HIS DESIGN.</p>
+<p>DO YOU NOT KNOW?</p>
+<p>HE KNOWS YOUR THOUGHTS.</p>
+<p>DO YOU NOT KNOW?</p>
+<p>HE UNDERSTANDS YOUR PAIN.</p>
+<p>DO YOU NOT KNOW?</p>
+<p>YOUR LIFE IS IN HIS HANDS.</p>
+<p>DO YOU NOT KNOW?</p>
+<p>YOU CANNOT RUN FROM HIM.</p>
+<p>DO YOU NOT KNOW?</p>
+<p>HE HOLDS THE KEY TO YOUR FUTURE.</p>
+<p>DO YOU NOT KNOW?</p>
+<p>EVERY BREATH YOU TAKE IS BECAUSE OF HIM.</p>
+<p>DO YOU NOT KNOW?</p>
+<p>YOU ARE NEVER ALONE.</p>
+<p>DO YOU NOT KNOW?</p>
+<p>HE IS EVERYWHERE.</p>
+<p>DO YOU NOT KNOW?</p>
+<p>YOUR FATE IS ALREADY DECIDED.</p>
+<p>DO YOU NOT KNOW?</p>
+<p>THE TIME WILL COME SOON.</p>
+<p>DO YOU NOT KNOW?</p>
+<p>YOU MUST BE READY.</p>
+<p>DO YOU NOT KNOW?</p>
+<p>HE WILL COME FOR YOU.</p>
+<p>DO YOU NOT KNOW?</p>
+<p>YOU CANNOT HIDE FOREVER.</p>
+<p>DO YOU NOT KNOW?</p>
+<p>HE IS WAITING.</p>
+<p>DO YOU NOT KNOW?</p>
 </body>
 </html>
