--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
             margin: 0;
             padding: 0;
             background-image: url('https://wallpapers.com/images/hd/red-fire-background-atebt6p51kpiqod3.jpg');
-            background-size: cover;
+            background-size: contain;
             font-family: Arial, Helvetica, sans-serif;
             color: red;
             text-align: center;
         }
 
         h1 {
-            font-size: 180px;
+            font-size: 75px;
             text-shadow: 4px 4px 10px black;
-            margin-top: 200px;
+            margin-top: 50px;
         }
 
         img {
